fix: fix some permission and page unit bugs
